# fusion-design-lab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  TODO.md  __init__.py  client.py  hackathan_raw_guidance.md  models.py  openenv.yaml  pyproject.toml
assets/p1_seeds/: creative_best.json  creative_seed.json  egodos_seed.json  egodos_sparse_rgroup_best.json  manifest.json  samet_seed.json  scadena_repaired_best.json  scadena_seed.json
baselines/: README.md  __init__.py  compare.py  fixture_high_fidelity_pairs.json  heuristic_agent.py  high_fidelity_validation.py  measured_sweep.py  random_agent.py  replay_playtest.py  submit_side_trace.json
baselines/sweep_results/: measured_sweep_20260308T045600Z.json  targeted_sweep.json
demo/: README.md
docs/: FUSION_DELIVERABLES_MAP.md  FUSION_DESIGN_LAB_PLAN_V2.md  FUSION_NEXT_12_HOURS_CHECKLIST.md  MEASURED_SWEEP_REPORT.md  P1_ENV_CONTRACT_V1.md  P1_HIGHFI_SUBMIT_BLOCKER.md  P1_MANUAL_PLAYTEST_LOG.md  P1_MEASURED_SWEEP_NOTE.md  P1_PARAMETERIZATION_DEEPDIVE.md  P1_PPO_SMOKE_NOTE.md  PIVOT_P1_ROTATING_ELLIPSE.md  SUBMISSION_PLAN_14H.md  VERIFIER_REWARD_REVIEW_2026-03-08.md
docs/archive/: FUSION_DELIVERABLES_MAP.md  FUSION_NEXT_12_HOURS_CHECKLIST.md  PIVOT_P1_ROTATING_ELLIPSE.md  README.md  SUBMISSION_PLAN_14H.md
docs/findings/: FUSION_DESIGN_LAB_PLAN_V2.md  MEASURED_SWEEP_REPORT.md  P1_REPLAY_PLAYTEST_REPORT.md
fusion_lab/: __init__.py  client.py  llm_agent.py  models.py
server/: Dockerfile  __init__.py  app.py  contract.py  environment.py  physics.py
tests/: test_repo_scaffold.py
training/: README.md  demo_animation.py  llm_rollout.py  ppo_smoke.py
(+12 files in other folders)
